[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nira-repl"
version = "1.0.0"
description = "Secure code execution sandbox for Claude — run Python, JavaScript, and shell commands"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "pachote", email = "beatsyncpro.official@gmail.com" }
]
keywords = ["mcp", "repl", "code-execution", "sandbox", "python", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Interpreters",
]

dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/pachote/nira-repl"
Repository = "https://github.com/pachote/nira-repl"
"Bug Tracker" = "https://github.com/pachote/nira-repl/issues"

[project.scripts]
nira-repl = "server:main"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.hatch.metadata]
allow-direct-references = true
